array.island.Island.scala.error
Erreur de compilation :
Island:4: error: not found: value l
  l = Array.len(num)
  ^