array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var niveaux = 0
  l = Array.len(num)
}